[gd_scene load_steps=2 format=2]

[ext_resource path="res://Collisions/DetectionZone.gd" type="Script" id=1]

[node name="DetectionZone" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_DetectionZone_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DetectionZone_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DetectionZone_body_exited"]
